assets/css/theme.css
/* ... */
/* Om oss page */

.om-oss-container {
  width: 100%;
  height: 1650px;
  background-color: rgb(219, 219, 219);
  position: relative;
}
.om-oss-image-wrapper {
  width: 100%;
  height: 700px;
  position: relative;
}
.om-oss-image-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: fill; /* This property makes the image fill out the container */
  position: absolute;
  top: 0;
  left: 0;
}
.om-oss-image-title {
  padding-left: 100px;
  position: absolute;
  top: 80px; /* Adjust top positioning as needed */
  left: 200px; /* Adjust left positioning as needed */
  z-index: 1; /* Set a higher z-index to ensure it appears above the image */
}

.om-oss-image-title h1 {
  color: white;
  font-size: 100px;
  font-family: 'Bitter', serif;
}

.om-oss-intro {
  padding-top: 60px;
  padding-bottom: 40px;
  padding-left: 20%;
  padding-right: 20%;
  display: flex;
  font-family: 'Bitter', serif;
  background-color: #eeeeee;
}
.om-oss-intro span {
  color: rgb(73, 73, 73);
  font-size: 22px;
  line-height: 1.45em;
}

.om-oss-box-container {
  display: flex;
  justify-content: center;
  width: 100%;
  padding-top: 60px;
}

.om-oss-box-container > div {
  width: 300px; /* Set width of child divs as needed */
  height: 100%; /* Set height of child divs as needed */
  margin-right: 30px; /* Add small space between child divs */
  border-radius: 4px;
}

.om-oss-box-card:hover {
  background-color: rgba(0, 0, 0, 0.479);
  cursor: pointer;
}

.om-oss-box-card {
  position: relative; /* Ensure relative positioning for absolute child elements */
  border-radius: 5px;
  overflow: hidden;
}

.om-oss-box-card::after {
  content: ""; /* Create the overlay */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0); /* Transparent initially */
  opacity: 0; /* Initially hidden */
  transition: opacity 0.3s ease; /* Smooth transition for opacity change */
}

.om-oss-box-card:hover::after {
  opacity: 0.5; /* Opacity of overlay color on hover */
  background-color: rgba(0, 0, 0, 0.479); /* Color and opacity of the overlay */
}

.card-image img {
  width: 100%;
  height: 200px;
}

.card-info {
  background-color: #4b5a73;
  padding: 10px;
}

.om-oss-box-card p {
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 16px;
  color: white;
}

.card-info h3 {
  font-family: 'Bitter', serif;
  font-size: 25px;
  color: white;
  padding-bottom: 10px;
}

@media (max-width: 991px) {
  .om-oss-container {
    height: 3600px;
  }

  .om-oss-box-container {
    flex-direction: column;
    align-items: center;
  }

  .om-oss-box-container > div {
    margin-right: 0;
    height: 290px;
  }

  .om-oss-box-card {
    padding-top: 20px;
  }
}

/* ARROW DOWN */
.sf-menu.nav > li > a.sf-with-ul,
.sf-arrows .sf-with-ul {
  padding-right: 1.8em;
}
.sf-arrows .sf-with-ul:after {
  content: '';
  position: absolute;
  top: 50%;
  right: 1em;
  margin-top: -1px;
  height: 0;
  width: 0;
  border: 3px solid transparent;
  border-top-color: #a5abb7;
}
.sf-arrows > li > .sf-with-ul:focus:after,
.sf-arrows > li:hover > .sf-with-ul:after,
.sf-arrows > .sfHover > .sf-with-ul:after {
  border-top-color: #ec005f;

}
/* ARROW RIGHT */
.sf-arrows ul .sf-with-ul:after {
  margin-top: -5px;
  margin-right: -3px;
  border-color: transparent;
  border-left-color: #a5abb7;
}
.sf-arrows ul li > .sf-with-ul:focus:after,
.sf-arrows ul li:hover > .sf-with-ul:after,
.sf-arrows ul .sfHover > .sf-with-ul:after {
  border-left-color: #ec005f;
}
.sf-menu li li:hover,
.sf-menu li li.sfHover,
.sf-menu li li.sfHover > a,
.sf-menu li li.active {
  background-color: #ec005f;
}
.sf-menu li ul ul {
  -webkit-box-shadow: none;
  box-shadow: none;
}
.sf-menu li.megamenu {
  position: inherit !important;
}
.sf-menu li.megamenu > ul {
  font-weight: normal;
  font-size: 13px;
  text-transform: none;
  width: 100%;
  margin: 0;
  padding: 0 15px;
}
.sf-menu li.megamenu > ul li.row {
  color: #7f7f7f !important;
  padding: 15px 0;
  margin-left: -15px;
  margin-right: -15px;
  margin-top: 0;
}
.sf-menu li.megamenu > ul li.row div[class*="col-"] {
  margin-top: 0;
}
.sf-menu li.megamenu > ul li ul {
  display: block;
  position: relative;
  left: 0;
  margin-left: 0;
}
.sf-menu li.megamenu > ul li a {
  background-color: transparent;
}
.sf-menu li.megamenu ul {
  margin-left: 0;
}
.sf-menu li.megamenu ul a {
  padding-left: 0;
}
.sf-menu li.megamenu ul a:hover {
  color: #ec005f;
}
.sf-menu li.megamenu p {
  margin-bottom: 10px;
}
.sf-menu li.megamenu .block-title {
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 10px;
  padding-bottom: 8px;
  color: #232323;
}
.sf-menu li.sale a {
  background-color: #FFE4E1;
  color: #ffffff;
}
.sf-menu li.sale a:hover {
  background-color: #000 !important;
    color: #fff;
}
.menu-toggle {
  display: none;
  height: 40px;
}
@media (max-width: 991px) {
  .menu-toggle {
    display: inline-block;
  }
}
.menu-toggle-close {
  display: none;
}
@media (max-width: 991px) {
  .menu-toggle-close {
    display: block;
    width: 100%;
    text-align: right;
  }
  .menu-toggle-close .fa {
    display: inline-block;
    text-align: center;
    width: 30px;
    height: 30px;
    font-size: 15px;
    line-height: 28px;
    color: #ffffff !important;
    background-color: #232323;
    border: solid 1px #ffffff;
    border-radius: 15px;
  }
}
/* ... */

